--- a/css/defensa.css
+++ b/css/defensa.css
@@ -35,6 +35,22 @@ section {
     margin-right: 5%;
 }
 
+details{
+
+    summary{
+    list-style: none;
+    padding: 5px;
+    }
+
+    a{
+        padding: 5px;
+        background-color: white;
+        color: black;
+        border-radius: 25%;
+        text-decoration: none;
+    }
+}
+
 .prision{
     width: 100%;
     display: flex;
